fix z-index

--- a/Alfred.less
+++ b/Alfred.less
@@ -11,6 +11,7 @@
 // block hover
 .alfred:hover {
   outline: @outline;
+  z-index: 1;
 }
 
 // the alfred class is added by JS on init()
